# zsim_dot_com_dot_cn

./: .gitignore  CLAUDE.md  README.md  README.zh.md
ZsimWebPage/: .env.production  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
ZsimWebPage/dist-0.0.1/: index.html
ZsimWebPage/dist-0.0.1/assets/: main-BOiZSxHc.css  main-CjYZqtFM.js
ZsimWebPage/docs/: doc.md  docs.md
ZsimWebPage/src/: App.vue  config.ts  i18n.ts  main.ts
ZsimWebPage/src/assets/: base.css  main.css
ZsimWebPage/src/components/: DocsView.vue  Downloads.vue  Home.vue  LoginView.vue  VoteView.vue
ZsimWebPage/src/docs/: docs.md
ZsimWebPage/src/locales/: en.json  zh.json
ZsimWebPage/src/router/: index.ts
backend/: .gitignore  config.example.toml  main.py  pyproject.toml  test_auth.py
backend/src/: __init__.py  auth.py  config.toml  vote.py
backend/src/assets/: avatars.json  buddy.json  equipment_suits.json  weapons.json
backend/src/auth/: __init__.py  aliyun_sms.py  database.py  email.py
backend/src/github/: release_api.py
frontend/: .env.production  .prettierignore  index.html  package-lock.json
frontend/docs/: doc.en.md
frontend/src/: App.vue  i18n.ts  main.ts
frontend/src/apis/: types.ts
frontend/src/assets/: base.css
frontend/src/components/: Downloads.vue  GitHubButton.vue  Header.vue  Home.vue  LanguageSwitcher.vue  LoginView.vue  ToastNotification.vue  UserAuth.vue  VoteView.vue
frontend/src/locales/: en.json  zh.json
frontend/src/pages/: DocsPage.vue  HomePage.vue  LoginPage.vue  VotePage.vue
(+1 files in other folders)
