[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "aiosqlite>=0.21.0",
    "alibabacloud-dysmsapi20170525==4.1.2",
    "fastapi>=0.115.13",
    "pydantic>=2.11.7",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.3",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
